[package]
name = "yakui-macroquad"
version = "0.2.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/profan/yakui-macroquad"
description = "A library integrating yakui with macroquad."
license = "MIT"

keywords = ["gamedev", "graphics", "ui"]
categories = ["gui"]

[dependencies]
yakui-miniquad = "0.2.3"
macroquad = { version = "0.3.24", default-features = false }

[dev-dependencies]
yakui = "0.2.0"

[[example]]
name = "hello-world"
