[package]
name = "yakui-macroquad"
version = "0.3.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/profan/yakui-macroquad"
description = "A library integrating yakui with macroquad."
license = "MIT"

keywords = ["gamedev", "graphics", "ui"]
categories = ["gui"]

[dependencies]
macroquad = { version = "0.4.5", default-features = false }
yakui-miniquad = "0.3.0"

[dev-dependencies]
yakui = "0.2.0"

[[example]]
name = "hello-world"
